--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ Table of Contents:
     outline:0 !important
 }
 body {
-    font-family:'Roboto',Calibri,Arial,sans-serif;
+    font-family:'Coda',Calibri,Arial,sans-serif;
     font-size:16px;
     font-weight:300;
     color:#777;
@@ -76,7 +76,7 @@ ul {
 }
 .block-title {
     font-weight:300;
-    font-family:'Roboto Condensed',sans-serif;
+    font-family:'Coda',sans-serif;
     font-size:3em;
     padding:0 40px;
     margin:0;
