--- a/css/style.css
+++ b/css/style.css
@@ -1258,22 +1258,27 @@ ul.social-icons li a {
 .logo {
     font-size: 18px;
     top: 18px;
+    padding: 0;
+    margin: 0;
 }
 
 @media (min-width: 768px) {
     .logo {
         font-size: 42px;
+        top: 0;
     }
 }
 
 @media (min-width: 992px) {
     .logo {
         font-size: 48px;
+        top: 0;
     }
 }
 
 @media (min-width: 1200px) {
     .logo {
         font-size: 52px;
+        top: 0;
     }
 }
