--- a/css/style.css
+++ b/css/style.css
@@ -1311,3 +1311,24 @@ ul.social-icons li a {
 #ayuda .row > div p {
     text-align: justify;
 }
+
+#ayuda .row > div th {
+    text-align: center;
+}
+
+#ayuda .row > div p a,
+#ayuda .row > div p a:visited { 
+    color: #33b77a;
+    font-weight: bold;
+}
+
+#ayuda .row > div p a:hover,
+#ayuda .row > div p a:active,
+#ayuda .row > div p a:focus {
+    color: #406251;
+}
+
+#ayuda .row > div p code {
+    color: #195b3d;
+    background-color: #ccedde;
+}
