--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,16 @@ b, strong {
 // 03 - Preloader
 /////////////////////////////////////////////////////////////////////*/
 
+@keyframes pulse {
+    0%, 100% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+}
+
 #preloader {
     position:fixed;
     left:0;
@@ -278,7 +288,20 @@ b, strong {
     width:100%;
     height:100%;
     overflow:visible;
-    background: #fff url('../img/preloader.gif') no-repeat center center;
+    /*background: #fff url('../img/preloader.gif') no-repeat center center;*/
+    background: #000;
+}
+
+#preloader .logo {
+    animation: pulse 2s linear infinite;
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background: url('../img/enlightened.svg') no-repeat center center;
+    background-size: 50% 50%;
+    animation: pulse 4s ease infinite;
 }
 
 
@@ -1156,8 +1179,7 @@ ul.social-icons li a {
 
 
 
-@media all and (max-width:1340px) and (min-width:1170px;
-) {
+@media all and (max-width:1340px) and (min-width:1170px) {
     .address-list li {
         font-size:18px;
     }
